--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="kr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdnjs.cloudflare.com/ajax/libs/pretendard/1.3.8/static/pretendard-dynamic-subset.css" />
+    <title>세뱃돈 계산기</title>
   </head>
   <body>
     <div id="root"></div>
